SERVER-31399 Include time spent applying batches in repl.apply.batches.totalMillis

(cherry picked from commit d9038eb6236a7351addf8a58ce204be575bcb079)

SERVER-33448 Relax time diff requirements in apply_batches_totalMillis.js

(cherry picked from commit 04cc084048a5f37c9d10ee3bac9dbef1e89672c5)